# esp-matter-thread-discovery

./: README.md  esp-matter-thread-discovery.code-workspace
code/m5stack_core2_zephyr_blink/: CMakeLists.txt  README.md
code/m5stack_core2_zephyr_board_buttons/: CMakeLists.txt  README.md  prj.conf
code/m5stack_core2_zephyr_env3_console/: CMakeLists.txt  README.md
code/m5stack_core2_zephyr_env3_ui/: .gitignore  CMakeLists.txt  KConfig  README.md  prj.conf
code/m5stack_core2_zephyr_env3_ui/src/: main.c
code/m5stack_core2_zephyr_env3_ui/src/services/sensor/: CMakeLists.txt  sensor_svc.c  sensor_svc.h  sensor_svc_bus.c  sensor_svc_bus.h  sensor_svc_shell.c
code/m5stack_core2_zephyr_env3_ui/src/user_interface/: CMakeLists.txt  lgvl_render.c  lgvl_render.h  lgvl_render_bus.c  lgvl_render_bus.h  screen_manager.c  screen_manager.h
code/m5stack_core2_zephyr_env3_ui/src/user_interface/fonts/: ui_font_RobotoCondensedBold60.c  ui_font_RobotoCondensedRegular30.c
code/m5stack_core2_zephyr_env3_ui/src/user_interface/images/: ui_img_humidity_low_fill0_wght400_grad0_opsz48_png.c  ui_img_thermometer_fill0_wght400_grad0_opsz48_png.c  ui_img_warning_fill0_wght400_grad0_opsz48_png.c
code/m5stack_core2_zephyr_env3_ui/src/user_interface/screens/: main_screen.c
code/m5stack_core2_zephyr_env3_ui/src/user_interface/themes/: themes.c  themes.h
code/zephyr_blink/: CMakeLists.txt
code/zephyr_input_areamap/: CMakeLists.txt  README.md  input_areamap.c
docs/: _config.yml  index.md
docs/m5stack-core2-zephyr-101/: index.md
docs/zephyr-shell/: index.md
pages/: README.md
(+7 files in other folders)
